name:                update-chat-site
version:             0.1.0.0
synopsis:            Update a CHAT site
description:         Update a CHAT site
homepage:            https://github.com/TalkBank/update-chat-site
license:             BSD3
license-file:        LICENSE
author:              Franklin Chen
maintainer:          franklinchen@franklinchen.com
copyright:           Franklin Chen
category:            Configuration
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

executable update-chat-site
  default-language:    Haskell2010
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts "-with-rtsopts=-I0 -qg -qb"
  build-depends:       base >= 4 && <= 5
                     , containers
                     , shake
                     , MissingH
                     , directory

source-repository head
  type:                 git
  location:             https://github.com/TalkBank/update-chat-site
