name:                update-chat-site
version:             0.1.0.0
synopsis:            Update a CHAT site
description:         Update a CHAT site
homepage:            https://github.com/TalkBank/update-chat-site
license:             BSD3
license-file:        LICENSE
author:              Franklin Chen
maintainer:          franklinchen@franklinchen.com
copyright:           Franklin Chen
category:            Configuration
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  hs-source-dirs:      src
  exposed-modules:     TalkBank.Media
  other-modules:       TalkBank.Re
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , filepath
                     , pcre-heavy
                     , pcre-light
                     , stringable
                     , string-conversions
                     , template-haskell
                     
executable update-chat-site
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -rtsopts "-with-rtsopts=-I0 -qg -qb"
  build-depends:       base >= 4 && <= 5
                     , update-chat-site
                     , shake
                     , directory
                     , filepath
                     , bytestring
                     , hostname
                     , extra

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , update-chat-site
                     , hspec
                     , QuickCheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
                     
source-repository head
  type:                 git
  location:             https://github.com/TalkBank/update-chat-site
